--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
 	<modelVersion>4.0.0</modelVersion>
 
@@ -10,30 +10,36 @@
 		<artifactId>app-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
-	<modules>
-	</modules>
-	
+
 	<artifactId>common-data-util</artifactId>
-  <name>>common-data-utilt</name>
+	<name>common-data-util</name>
+	<packaging>jar</packaging>
 	<description>Common Data Utils</description>
-	
+
 	<properties>
+		<json-patch.version>1.13</json-patch.version>
+		<common-api.version>0.0.1-SNAPSHOT</common-api.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.flywaydb</groupId>
-        <artifactId>flyway-core</artifactId>
-      </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>co.id.kuncoro</groupId>
+			<artifactId>common-api</artifactId>
+			<version>${common-api.version}</version>
+		</dependency>
 	</dependencies>
 </project>
